--- a/src/index.html
+++ b/src/index.html
@@ -3,79 +3,218 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>日报展示</title>
+    <title>网文日报</title>
     <style>
-      /* 简单的样式 */
+      body {
+        font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+          "Helvetica Neue", Arial, sans-serif;
+        max-width: 1200px;
+        margin: 0 auto;
+        padding: 20px;
+        background-color: #f5f5f5;
+      }
+
+      .header {
+        text-align: center;
+        margin-bottom: 30px;
+      }
+
+      .header h1 {
+        color: #333;
+        margin-bottom: 10px;
+      }
+
+      .header .date {
+        color: #666;
+        font-size: 1.1em;
+      }
+
+      .tabs {
+        display: flex;
+        justify-content: center;
+        margin-bottom: 20px;
+        gap: 10px;
+      }
+
+      .tabs button {
+        padding: 10px 20px;
+        border: none;
+        border-radius: 5px;
+        background-color: #e0e0e0;
+        cursor: pointer;
+        font-size: 1em;
+        transition: background-color 0.3s;
+      }
+
+      .tabs button:hover {
+        background-color: #d0d0d0;
+      }
+
+      .tabs button.active {
+        background-color: #4caf50;
+        color: white;
+      }
+
       .tab {
         display: none;
+        background-color: white;
+        padding: 20px;
+        border-radius: 10px;
+        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
       }
+
       .tab.active {
         display: block;
       }
-      .tabs button {
-        margin-right: 10px;
+
+      .tab h2 {
+        color: #333;
+        margin-top: 0;
+        padding-bottom: 10px;
+        border-bottom: 2px solid #4caf50;
+      }
+
+      pre {
+        background-color: #f8f8f8;
+        padding: 15px;
+        border-radius: 5px;
+        overflow-x: auto;
+        white-space: pre-wrap;
+        word-wrap: break-word;
+      }
+
+      .error-message {
+        color: #d32f2f;
+        padding: 20px;
+        text-align: center;
+        background-color: #ffebee;
+        border-radius: 5px;
+        margin: 10px 0;
       }
     </style>
   </head>
   <body>
-    <div class="tabs">
-      <button onclick="showTab('qidian')">起点</button>
-      <button onclick="showTab('zongheng')">纵横</button>
-      <button onclick="showTab('weibo')">微博</button>
+    <div class="header">
+      <h1>网文日报</h1>
+      <div class="date" id="current-date"></div>
     </div>
 
-    <div id="qidian" class="tab">
-      <h2>起点数据</h2>
-      <pre id="qidian-data"></pre>
+    <div class="tabs">
+      <button onclick="showTab('qidian')" class="active">起点月票榜</button>
+      <button onclick="showTab('zongheng')">纵横月票榜</button>
+      <button onclick="showTab('weibo')">微博热搜</button>
+    </div>
+
+    <div id="qidian" class="tab active">
+      <h2>起点月票榜</h2>
+      <div id="qidian-data"></div>
     </div>
     <div id="zongheng" class="tab">
-      <h2>纵横数据</h2>
-      <pre id="zongheng-data"></pre>
+      <h2>纵横月票榜</h2>
+      <div id="zongheng-data"></div>
     </div>
     <div id="weibo" class="tab">
-      <h2>微博数据</h2>
-      <pre id="weibo-data"></pre>
+      <h2>微博热搜</h2>
+      <div id="weibo-data"></div>
     </div>
 
     <script>
+      // 获取当前日期
+      const today = new Date();
+      const dateStr = today.toLocaleDateString("zh-CN", {
+        year: "numeric",
+        month: "2-digit",
+        day: "2-digit",
+      });
+      document.getElementById("current-date").textContent = `${dateStr} 数据`;
+
+      // Tab切换功能
       function showTab(tabId) {
+        // 更新按钮状态
+        document.querySelectorAll(".tabs button").forEach((button) => {
+          button.classList.remove("active");
+        });
+        document
+          .querySelector(`button[onclick="showTab('${tabId}')"]`)
+          .classList.add("active");
+
+        // 更新内容显示
         document.querySelectorAll(".tab").forEach((tab) => {
           tab.classList.remove("active");
         });
         document.getElementById(tabId).classList.add("active");
       }
 
-      // 默认显示第一个Tab
-      showTab("qidian");
+      // 格式化数据显示
+      function formatData(data, type) {
+        let html = '<div class="data-container">';
+
+        if (type === "weibo") {
+          // 微博热搜格式化
+          data.topics.forEach((topic, index) => {
+            html += `
+              <div class="item">
+                <div class="rank">${topic.rank}</div>
+                <div class="title">
+                  <a href="${topic.link}" target="_blank">${topic.title}</a>
+                </div>
+                <div class="heat">${topic.hot.value}</div>
+              </div>
+            `;
+          });
+        } else {
+          // 起点和纵横格式化
+          data.books.forEach((book, index) => {
+            html += `
+              <div class="item">
+                <div class="rank">${book.rank}</div>
+                <div class="book-info">
+                  <div class="title">
+                    <a href="${book.link}" target="_blank">${book.name}</a>
+                  </div>
+                  <div class="author">作者：${book.author.name}</div>
+                  <div class="category">分类：${book.category}</div>
+                </div>
+              </div>
+            `;
+          });
+        }
+
+        html += "</div>";
+        return html;
+      }
 
       // 加载数据
-      fetch("./scripts/qidian/yuepiao/2025-01-11/yuepiao.json ")
-        .then((response) => response.json())
-        .then((data) => {
-          document.getElementById("qidian-data").textContent = JSON.stringify(
-            data,
-            null,
-            2
-          );
-        });
-      fetch("./scripts/zongheng/yuepiao/2025-01-11/yuepiao.json")
-        .then((response) => response.json())
-        .then((data) => {
-          document.getElementById("zongheng-data").textContent = JSON.stringify(
-            data,
-            null,
-            2
-          );
-        });
-      fetch("./scripts/weibo/hot/2025-01-11/hot.json")
-        .then((response) => response.json())
-        .then((data) => {
-          document.getElementById("weibo-data").textContent = JSON.stringify(
-            data,
-            null,
-            2
-          );
-        });
+      async function loadData() {
+        const date = `${today.getFullYear()}-${String(
+          today.getMonth() + 1
+        ).padStart(2, "0")}-${String(today.getDate()).padStart(2, "0")}`;
+
+        const sources = {
+          qidian: `./scripts/qidian/yuepiao/${date}/yuepiao.json`,
+          zongheng: `./scripts/zongheng/yuepiao/${date}/yuepiao.json`,
+          weibo: `./scripts/weibo/hot/${date}/hot.json`,
+        };
+
+        for (const [key, url] of Object.entries(sources)) {
+          try {
+            const response = await fetch(url);
+            if (!response.ok) throw new Error("数据加载失败");
+            const data = await response.json();
+            document.getElementById(`${key}-data`).innerHTML = formatData(
+              data,
+              key
+            );
+          } catch (error) {
+            document.getElementById(
+              `${key}-data`
+            ).innerHTML = `<div class="error-message">暂无数据，请稍后再试</div>`;
+          }
+        }
+      }
+
+      // 初始加载
+      loadData();
     </script>
   </body>
 </html>
