同时执行多个文件

--- a/src/index.html
+++ b/src/index.html
@@ -173,7 +173,7 @@
                     <a href="${book.link}" target="_blank">${book.name}</a>
                   </div>
                   <div class="author">作者：${book.author.name}</div>
-                  <div class="category">分类：${book.category}</div>
+                  <div class="category">分类：${book.category.main}</div>
                 </div>
               </div>
             `;
