--- a/src/index.html
+++ b/src/index.html
@@ -1,17 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-CN">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>网文日报</title>
     <style>
       body {
-        font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-          "Helvetica Neue", Arial, sans-serif;
+        font-family: -apple-system, system-ui, sans-serif;
         max-width: 1200px;
         margin: 0 auto;
         padding: 20px;
-        background-color: #f5f5f5;
+        background: #f5f5f5;
       }
 
       .header {
@@ -19,181 +18,139 @@
         margin-bottom: 30px;
       }
 
-      .header h1 {
-        color: #333;
-        margin-bottom: 10px;
-      }
-
-      .header .date {
-        color: #666;
-        font-size: 1.1em;
-      }
-
       .tabs {
         display: flex;
-        justify-content: center;
-        margin-bottom: 20px;
         gap: 10px;
+        margin-bottom: 20px;
+        justify-content: center;
       }
 
-      .tabs button {
+      .tab-button {
         padding: 10px 20px;
         border: none;
-        border-radius: 5px;
-        background-color: #e0e0e0;
+        border-radius: 4px;
+        background: #e0e0e0;
         cursor: pointer;
-        font-size: 1em;
-        transition: background-color 0.3s;
+        transition: all 0.3s;
       }
 
-      .tabs button:hover {
-        background-color: #d0d0d0;
-      }
-
-      .tabs button.active {
-        background-color: #4caf50;
+      .tab-button.active {
+        background: #1976d2;
         color: white;
       }
 
-      .tab {
+      .tab-content {
         display: none;
-        background-color: white;
+        background: white;
         padding: 20px;
-        border-radius: 10px;
+        border-radius: 8px;
         box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
       }
 
-      .tab.active {
+      .tab-content.active {
         display: block;
       }
 
-      .tab h2 {
-        color: #333;
-        margin-top: 0;
-        padding-bottom: 10px;
-        border-bottom: 2px solid #4caf50;
+      .item {
+        display: flex;
+        align-items: center;
+        padding: 10px;
+        border-bottom: 1px solid #eee;
       }
 
-      pre {
-        background-color: #f8f8f8;
-        padding: 15px;
-        border-radius: 5px;
-        overflow-x: auto;
-        white-space: pre-wrap;
-        word-wrap: break-word;
+      .rank {
+        font-size: 1.2em;
+        font-weight: bold;
+        width: 40px;
       }
 
-      .error-message {
-        color: #d32f2f;
-        padding: 20px;
+      .title {
+        flex: 1;
+      }
+
+      .title a {
+        color: #1976d2;
+        text-decoration: none;
+      }
+
+      .title a:hover {
+        text-decoration: underline;
+      }
+
+      .info {
+        color: #666;
+        font-size: 0.9em;
+      }
+
+      .loading {
         text-align: center;
-        background-color: #ffebee;
-        border-radius: 5px;
-        margin: 10px 0;
+        padding: 20px;
+        color: #666;
+      }
+
+      .error {
+        color: #d32f2f;
+        text-align: center;
+        padding: 20px;
       }
     </style>
   </head>
   <body>
     <div class="header">
       <h1>网文日报</h1>
-      <div class="date" id="current-date"></div>
+      <p id="update-time"></p>
     </div>
 
     <div class="tabs">
-      <button onclick="showTab('qidian')" class="active">起点月票榜</button>
-      <button onclick="showTab('zongheng')">纵横月票榜</button>
-      <button onclick="showTab('weibo')">微博热搜</button>
+      <button class="tab-button active" onclick="showTab('qidian')">
+        起点月票榜
+      </button>
+      <button class="tab-button" onclick="showTab('zongheng')">
+        纵横月票榜
+      </button>
+      <button class="tab-button" onclick="showTab('weibo')">微博热搜</button>
     </div>
 
-    <div id="qidian" class="tab active">
-      <h2>起点月票榜</h2>
-      <div id="qidian-data"></div>
+    <div id="qidian" class="tab-content active">
+      <div class="loading">加载中...</div>
     </div>
-    <div id="zongheng" class="tab">
-      <h2>纵横月票榜</h2>
-      <div id="zongheng-data"></div>
+    <div id="zongheng" class="tab-content">
+      <div class="loading">加载中...</div>
     </div>
-    <div id="weibo" class="tab">
-      <h2>微博热搜</h2>
-      <div id="weibo-data"></div>
+    <div id="weibo" class="tab-content">
+      <div class="loading">加载中...</div>
     </div>
 
     <script>
-      // 获取当前日期
-      const today = new Date();
-      const dateStr = today.toLocaleDateString("zh-CN", {
-        year: "numeric",
-        month: "2-digit",
-        day: "2-digit",
+      // 显示最后更新时间
+      const updateTime = new Date().toLocaleString("zh-CN", {
+        timeZone: "Asia/Shanghai",
       });
-      document.getElementById("current-date").textContent = `${dateStr} 数据`;
+      document.getElementById(
+        "update-time"
+      ).textContent = `最后更新: ${updateTime}`;
 
-      // Tab切换功能
+      // Tab切换
       function showTab(tabId) {
-        // 更新按钮状态
-        document.querySelectorAll(".tabs button").forEach((button) => {
-          button.classList.remove("active");
+        document.querySelectorAll(".tab-button").forEach((btn) => {
+          btn.classList.remove("active");
+        });
+        document.querySelectorAll(".tab-content").forEach((content) => {
+          content.classList.remove("active");
         });
         document
           .querySelector(`button[onclick="showTab('${tabId}')"]`)
           .classList.add("active");
-
-        // 更新内容显示
-        document.querySelectorAll(".tab").forEach((tab) => {
-          tab.classList.remove("active");
-        });
         document.getElementById(tabId).classList.add("active");
-      }
-
-      // 格式化数据显示
-      function formatData(data, type) {
-        let html = '<div class="data-container">';
-
-        if (type === "weibo") {
-          // 微博热搜格式化
-          data.topics.forEach((topic, index) => {
-            html += `
-              <div class="item">
-                <div class="rank">${topic.rank}</div>
-                <div class="title">
-                  <a href="${topic.link}" target="_blank">${topic.title}</a>
-                </div>
-                <div class="heat">${topic.hot.value}</div>
-              </div>
-            `;
-          });
-        } else {
-          // 起点和纵横格式化
-          data.books.forEach((book, index) => {
-            html += `
-              <div class="item">
-                <div class="rank">${book.rank}</div>
-                <div class="book-info">
-                  <div class="title">
-                    <a href="${book.link}" target="_blank">${book.name}</a>
-                  </div>
-                  <div class="author">作者：${book.author.name}</div>
-                  <div class="category">分类：${book.category.main}</div>
-                </div>
-              </div>
-            `;
-          });
-        }
-
-        html += "</div>";
-        return html;
       }
 
       // 加载数据
       async function loadData() {
-        const date = `${today.getFullYear()}-${String(
-          today.getMonth() + 1
-        ).padStart(2, "0")}-${String(today.getDate()).padStart(2, "0")}`;
-
+        const date = new Date().toISOString().split("T")[0];
         const sources = {
-          qidian: `./scripts/qidian/yuepiao/${date}/yuepiao.json`,
-          zongheng: `./scripts/zongheng/yuepiao/${date}/yuepiao.json`,
-          weibo: `./scripts/weibo/hot/${date}/hot.json`,
+          qidian: `./qidian/yuepiao/${date}/yuepiao.json`,
+          zongheng: `./zongheng/yuepiao/${date}/yuepiao.json`,
+          weibo: `./weibo/hot/${date}/weibo-hot.json`,
         };
 
         for (const [key, url] of Object.entries(sources)) {
@@ -201,16 +158,47 @@
             const response = await fetch(url);
             if (!response.ok) throw new Error("数据加载失败");
             const data = await response.json();
-            document.getElementById(`${key}-data`).innerHTML = formatData(
-              data,
-              key
-            );
+            renderData(key, data);
           } catch (error) {
             document.getElementById(
-              `${key}-data`
-            ).innerHTML = `<div class="error-message">暂无数据，请稍后再试</div>`;
+              key
+            ).innerHTML = `<div class="error">暂无数据，请稍后再试</div>`;
           }
         }
+      }
+
+      // 渲染数据
+      function renderData(type, data) {
+        const container = document.getElementById(type);
+        let html = "";
+
+        if (type === "weibo") {
+          data.topics.forEach((topic) => {
+            html += `
+              <div class="item">
+                <div class="rank">${topic.rank}</div>
+                <div class="title">
+                  <a href="${topic.link}" target="_blank">${topic.title}</a>
+                  <div class="info">${topic.hot.value}</div>
+                </div>
+              </div>
+            `;
+          });
+        } else {
+          data.books.forEach((book) => {
+            html += `
+              <div class="item">
+                <div class="rank">${book.rank}</div>
+                <div class="title">
+                  <a href="${book.link}" target="_blank">${book.name}</a>
+                  <div class="info">作者：${book.author.name} | 分类：${book.category.main}</div>
+                </div>
+              </div>
+            `;
+          });
+        }
+
+        container.innerHTML = html;
       }
 
       // 初始加载
